[package]
name = "rust-crashball-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8"
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = "0.16.0"
leafwing-input-manager = "0.5.1"
